--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -150,126 +150,6 @@ Inequalities describe conditions, ranges, or boundaries, they tell us what value
 | **Inequality** | Sets a condition or limit on the values                              | $x > 5$, $y \leq 10$        |
 
 
----
-
-### What is Linear Algebra?
-
-Linear algebra builds on basic algebra, but instead of handling single numbers, it works with:
-
-* **Vectors** (ordered lists of numbers)
-* **Matrices** (tables or grids of numbers)
-
-Linear algebra helps us process many data points at once, like hundreds or thousands of sentiment scores and price changes.
-This is essential for AI, because modern models work on large datasets and need efficient ways to apply mathematical operations across them.
-
----
-
-### 3. Linear Models in AI
-
-In AI, we often use **linear models** to predict outputs based on inputs.
-For example, Alex’s AI might use this equation:
-
-$$
-y = m x + b
-$$
-
-Where:
-
-* $y$ is the predicted percent change in stock price
-* $x$ is the sentiment score from news
-* $m$ is a learned weight (how strongly sentiment affects price)
-* $b$ is an adjustment (baseline price movement when sentiment is neutral)
-
----
-
-### 4. Example Data Table
-
-| Sentiment Score ($x$) | Actual Price Change ($y$) |
-| --------------------- | ------------------------- |
-| 0.3                   | 1.2                       |
-| -0.5                  | -3.8                      |
-| 0.8                   | 4.1                       |
-| -0.9                  | -10.0                     |
-
-AI looks at data like this to learn the best values of $m$ and $b$,
-so it can predict future price changes just from sentiment.
-
----
-
-### 5. Predict the Price Change
-
-Let’s say the AI finds:
-
-* $m = 4$
-* $b = 0.5$
-
-What will be the predicted price change if the sentiment score $x = 1.0$?
-
-**Solution:**
-
-$$
-y = 4 \times 1.0 + 0.5 = 4 + 0.5 = 4.5 \text{ percent}
-$$
-
-So, the AI predicts a 4.5 percent increase.
-
----
-
-### 6. Understanding the Slope and Intercept
-
-* **Slope $m$:**
-  This tells us how much the output changes for every unit change in the input.
-  In Alex’s case, it tells how strongly sentiment affects price change.
-
-* **If $m = 0$:**
-  It means sentiment has no effect; price change is flat regardless of news.
-
-* **Intercept $b$:**
-  This is the baseline output when input is zero.
-  So if the sentiment score is neutral ($x = 0$), the intercept tells what the AI predicts the price change will be.
-
----
-
-### Apply What You Have Learned
-
-Try solving these on your own.
-
-1. **Simple Prediction**
-   If $m = 3$, $b = 1$, and sentiment $x = -0.5$, what is the predicted price change?
-   (Hint: $y = 3 \times (-0.5) + 1$)
-
----
-
-2. **Understanding No Slope**
-   If $m = 0$, $b = 2$, what will be the predicted price change no matter what $x$ is? Why?
-
----
-
-3. **Intercept Interpretation**
-   If sentiment is perfectly neutral ($x = 0$), and $b = -1$, what does the model predict for price change? What might this suggest?
-
----
-
-4. **Extension: Try Your Own Numbers**
-   Make up your own values for $m$, $b$, and $x$, and calculate the prediction.
-   How does changing $m$ affect the outcome?
-   How does changing $b$ affect it?
-
----
-
-### Summary
-
-| Concept        | Role in AI Modeling                                         |
-| -------------- | ----------------------------------------------------------- |
-| Algebra        | Describes relationships between input and output            |
-| Linear Algebra | Handles many inputs and outputs at once (vectors, matrices) |
-| Linear Models  | Predict outcomes using simple equations like $y = m x + b$  |
-| Slope          | Measures how input affects output                           |
-| Intercept      | Gives the base prediction when input is zero                |
-
-
-
----
 
 ### **Functions — Mapping Inputs to Outputs**
 
@@ -401,160 +281,531 @@ $$
 Why does this matter?
 AI optimization (like adjusting portfolio weights or risk factors) often comes down to solving large systems like this, sometimes with hundreds of variables.
 
----
-
-### **Vectors: Representing Data Points**
-
-A **vector** is just an ordered list of numbers, like:
-
-$$
-[0.3, -0.5, 0.8]
-$$
-
-It can represent any series of features — for example, a snapshot of market indicators.
-
-Why use vectors?
-They allow AI to apply consistent operations across multiple inputs:
-
-* Scaling (multiplying all elements),
-* Weighting (applying learned coefficients),
-* Transformations (changing coordinate systems or representations).
 
 ---
 
-#### **Activity: Scale a Vector**
+### Linear Algebra?
 
-Given:
+Linear algebra builds on basic algebra, but instead of handling single numbers, it works with:
 
-$$
-v = [0.3, -0.5, 0.8], \quad m = 4
-$$
+* Vectors
+* Matrices
+It is often called the language of machine learning and artificial intelligence (AI) because:
 
-Multiply each element:
-
-$$
-[0.3 \times 4, -0.5 \times 4, 0.8 \times 4] = [1.2, -2.0, 3.2]
-$$
-
-This effectively scales each input feature by its weight.
+* Data is usually stored as vectors and matrices
+* Models use matrix operations to make predictions
+* Many algorithms, such as principal component analysis (PCA), linear regression, and neural networks, rely heavily on linear algebra
 
 ---
 
-### **Matrices: Organizing Multi-Dimensional Data**
+## Scalars, Vectors, and Vector Operations
 
-A **matrix** is like a table of vectors — rows and columns.
+---
 
-Example dataset:
+### 1.1 Scalars
 
-| Day | Score 1 | Score 2 |
-| --- | ------- | ------- |
-| 1   | 0.3     | 1.2     |
-| 2   | -0.5    | -3.8    |
+A scalar is simply a single number.
+Examples: 5, -3.2, 3.14
 
-Matrix form:
+In the context of AI, scalars appear as bias terms, learning rates, or single numerical features.
+
+---
+
+### 1.2 Vectors
+
+A vector is an ordered list of numbers, which can be visualized in two ways:
+
+* Row vector: \[x1, x2, x3]
+* Column vector:
+  \[
+  x1
+  x2
+  x3
+  ]
+
+Example:
+Imagine you are storing details about a student:
+
+* Height: 170 cm
+* Age: 18 years
+* Score: 95
+
+This can be written as a vector:
+\[170, 18, 95]
+
+This vector belongs to three-dimensional real space, written as R³.
+
+---
+
+### 1.3 Vector Operations
+
+Here are some basic but essential operations you can perform with vectors.
+
+---
+
+**1. Addition**
+When you add two vectors, you add their corresponding elements.
+
+Example:
+\[1, 2, 3] + \[4, 5, 6] = \[5, 7, 9]
+
+---
+
+**2. Scalar Multiplication**
+When you multiply a vector by a scalar, you multiply each element by that scalar.
+
+Example:
+2 \* \[3, -1] = \[6, -2]
+
+---
+
+**3. Dot Product (Inner Product)**
+The dot product of two vectors is the sum of the products of their corresponding elements.
+
+Example:
+\[a1, a2, a3] • \[b1, b2, b3] = a1 \* b1 + a2 \* b2 + a3 \* b3
+
+In AI, the dot product is often used to measure similarity between vectors, which is important in tasks like natural language processing and recommendation systems.
+
+---
+
+**4. Vector Norm (Length)**
+The norm or length of a vector is calculated as:
+||a|| = sqrt(a1² + a2² + ... + an²)
+
+This gives the magnitude or size of the vector.
+
+---
+
+**5. Unit Vector**
+A unit vector has a length of 1 and is obtained by dividing a vector by its norm:
+â = a / ||a||
+
+Unit vectors are often used to normalize data before feeding it into machine learning models.
+
+---
+
+## Real-World Example in Machine Learning
+
+Imagine a machine learning dataset:
+
+| Age | Income | Score |
+| --- | ------ | ----- |
+| 18  | 30000  | 72    |
+| 22  | 50000  | 85    |
+
+Each row represents a data point and can be treated as a vector.
+This allows machine learning algorithms to apply mathematical operations on the dataset efficiently.
+
+---
+
+## Summary of Part 1
+
+| Concept      | Meaning                       |
+| ------------ | ----------------------------- |
+| Scalar       | A single number               |
+| Vector       | A list of numbers             |
+| Add/Subtract | Combine or remove values      |
+| Dot Product  | Measures similarity           |
+| Norm         | Magnitude or length of vector |
+| Unit Vector  | Vector scaled to length 1     |
+
+---
+
+## Activities for Practice
+
+1. Write three features about yourself (for example: height, age, favorite number) and represent them as a vector.
+
+2. Take two simple vectors, like \[1, 2, 3] and \[4, 0, -1], and calculate:
+
+   * Their sum
+   * Their dot product
+   * The norm (length) of each
+
+3. Normalize the vector \[3, 4] into a unit vector.
+
+4. In your own words, explain where you think vectors might appear in an AI system you use every day (for example, a recommendation system or voice assistant).
+
+
+
+
+
+---
+
+# Matrices
+
+---
+
+## What is a Matrix?
+
+A **matrix** is a **2-dimensional array of numbers**, arranged in rows and columns.
+
+It looks like this:
 
 $$
+A =
 \begin{bmatrix}
-0.3 & 1.2 \\
--0.5 & -3.8
+1 & 2 & 3 \\
+4 & 5 & 6
 \end{bmatrix}
 $$
 
-Why use matrices?
-AI can process **all rows at once** using matrix operations, which is much faster and more efficient than handling each individually.
+* This matrix has **2 rows** and **3 columns**.
+* We say it has the **shape** \$2 \times 3\$ (read: "2 by 3").
+
+Each number in a matrix is called an **element** or **entry**.
 
 ---
 
-#### **Matrix-Vector Multiplication**
+## 2.1 Matrix Notation
 
-Given:
+* A matrix is usually denoted by uppercase letters: \$A, B, X, W\$
+* Elements are denoted as \$a\_{ij}\$, where:
 
-* Data matrix:
+  * \$i\$ is the **row number**
+  * \$j\$ is the **column number**
+
+For example, in:
 
 $$
+A =
 \begin{bmatrix}
-0.3 & 1.2 \\
--0.5 & -3.8
+1 & 2 \\
+3 & 4
 \end{bmatrix}
+\Rightarrow a_{12} = 2, \quad a_{21} = 3
 $$
-
-* Coefficient vector:
-
-$$
-\begin{bmatrix}
-m \\
-b
-\end{bmatrix}
-$$
-
-Multiply:
-
-$$
-\begin{bmatrix}
-0.3 \times m + 1.2 \times b \\
--0.5 \times m + (-3.8) \times b
-\end{bmatrix}
-$$
-
-This gives predictions across multiple rows at once.
 
 ---
 
-### **Determinants: Checking System Solvability**
+## 2.2 Types of Matrices
 
-The **determinant** is a single number calculated from a square matrix that tells you if a system has a unique solution.
+| Type                 | Description                     |
+| -------------------- | ------------------------------- |
+| **Square Matrix**    | Rows = Columns                  |
+| **Row Matrix**       | Only one row                    |
+| **Column Matrix**    | Only one column                 |
+| **Zero Matrix**      | All elements = 0                |
+| **Identity Matrix**  | Diagonal = 1, others = 0        |
+| **Diagonal Matrix**  | Only diagonal may have values   |
+| **Symmetric Matrix** | \$A = A^T\$ (Transpose is same) |
+
+---
+
+## 2.3 Matrix Operations
+
+### 1. Matrix Addition / Subtraction
+
+Can only be done if both matrices are of the **same size**:
+
+$$
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
++
+\begin{bmatrix}
+5 & 6 \\
+7 & 8
+\end{bmatrix}
+=
+\begin{bmatrix}
+6 & 8 \\
+10 & 12
+\end{bmatrix}
+$$
+
+---
+
+### 2. Scalar Multiplication
+
+Multiply every element of the matrix by a scalar:
+
+$$
+2 \cdot
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
+=
+\begin{bmatrix}
+2 & 4 \\
+6 & 8
+\end{bmatrix}
+$$
+
+---
+
+### 3. Matrix Multiplication
+
+If:
+
+* \$A\$ is \$m \times n\$
+* \$B\$ is \$n \times p\$
+
+Then the result \$C = AB\$ is \$m \times p\$
+
+$$
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
+\cdot
+\begin{bmatrix}
+5 \\
+6
+\end{bmatrix}
+=
+\begin{bmatrix}
+1\cdot5 + 2\cdot6 \\
+3\cdot5 + 4\cdot6
+\end{bmatrix}
+=
+\begin{bmatrix}
+17 \\
+39
+\end{bmatrix}
+$$
+
+This is extremely important in neural networks:
+**Input vector × Weight matrix = Output vector**
+
+---
+
+### 4. Matrix Transpose
+
+Flips rows and columns:
+
+$$
+A =
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
+\Rightarrow
+A^T =
+\begin{bmatrix}
+1 & 3 \\
+2 & 4
+\end{bmatrix}
+$$
+
+---
+
+### 5. Identity Matrix
+
+A special square matrix with 1’s on the diagonal and 0’s elsewhere:
+
+$$
+I =
+\begin{bmatrix}
+1 & 0 \\
+0 & 1
+\end{bmatrix}
+\Rightarrow AI = IA = A
+$$
+
+This acts like "1" for matrices, does not change the matrix when multiplied.
+
+---
+
+## Real-World Use of Matrices in AI
+
+| Use Case                        | Example                                                                     |
+| ------------------------------- | --------------------------------------------------------------------------- |
+| **Data storage**                | Entire datasets stored as matrices (rows = data points, columns = features) |
+| **Neural networks**             | Each layer applies a matrix transformation (weights × inputs)               |
+| **Image processing**            | Images are 2D or 3D matrices (RGB values)                                   |
+| **Natural Language Processing** | Word embeddings are stored in large matrices                                |
+| **Dimensionality Reduction**    | PCA uses eigenvectors of covariance matrices                                |
+
+---
+
+## Summary of Part 2: Matrices
+
+| Concept               | Use                               |
+| --------------------- | --------------------------------- |
+| Matrix                | Table of numbers                  |
+| Matrix addition       | Add same-size matrices            |
+| Scalar multiplication | Multiply every element by number  |
+| Matrix multiplication | Combine multiple data features    |
+| Transpose             | Swap rows and columns             |
+| Identity              | Neutral element of multiplication |
+
+---
+Here’s your **Part 4** with emojis and em dashes removed, just as you asked — no wording touched.
+
+---
+
+# Linear Algebra Part 4: Determinants and Inverse Matrices
+
+---
+
+## Why This Chapter Matters
+
+You’ve seen the equation:
+
+$$
+Ax = b \Rightarrow x = A^{-1}b
+$$
+
+But this **only works** if:
+
+* \$A\$ is **square** (same number of rows and columns)
+* \$A\$ is **invertible**
+
+To **check** if a matrix is invertible, we calculate its **determinant**.
+
+---
+
+## 4.1 Determinant
+
+The **determinant** of a square matrix is a **single number** that gives information about:
+
+* Whether a matrix is invertible
+* The volume scaling factor of a transformation
+* If a set of vectors is linearly dependent
+
+---
+
+### Determinant of a 2×2 Matrix
+
+$$
+A =
+\begin{bmatrix}
+a & b \\
+c & d
+\end{bmatrix}
+\Rightarrow
+\det(A) = ad - bc
+$$
 
 Example:
 
 $$
 \begin{bmatrix}
 2 & 3 \\
-1 & -1
+4 & 5
 \end{bmatrix}
+\Rightarrow \det = (2)(5) - (3)(4) = 10 - 12 = -2
 $$
 
-Determinant:
-
-$$
-(2 \times -1) - (3 \times 1) = -2 - 3 = -5
-$$
-
-If determinant ≠ 0, the system has a unique solution.
-If determinant = 0, the system has no or infinite solutions.
+If **det ≠ 0**, the matrix is **invertible**.
 
 ---
 
-#### Calculate a Determinant**
+### Determinant of a 3×3 Matrix
 
-Given:
+Use the **rule of Sarrus** or **cofactor expansion**:
 
 $$
+\begin{vmatrix}
+a & b & c \\
+d & e & f \\
+g & h & i
+\end{vmatrix}
+=
+a(ei - fh) - b(di - fg) + c(dh - eg)
+$$
+
+Example:
+
+$$
+\begin{vmatrix}
+1 & 2 & 3 \\
+0 & 1 & 4 \\
+5 & 6 & 0
+\end{vmatrix}
+= 1(1×0 - 4×6) - 2(0×0 - 4×5) + 3(0×6 - 1×5)
+= 1(0 - 24) - 2(0 - 20) + 3(0 - 5)
+= -24 + 40 - 15 = 1
+$$
+
+---
+
+### Key Rule
+
+| Determinant | Matrix Type                   | System                   |
+| ----------- | ----------------------------- | ------------------------ |
+| 0           | **Not invertible** (Singular) | No or infinite solutions |
+| ≠ 0         | **Invertible** (Non-singular) | Unique solution exists   |
+
+---
+
+## 4.2 Inverse of a Matrix
+
+If \$A\$ is a square matrix and \$\det(A) \ne 0\$, then there exists a matrix \$A^{-1}\$ such that:
+
+$$
+AA^{-1} = A^{-1}A = I
+$$
+
+---
+
+### Inverse of a 2×2 Matrix
+
+$$
+A =
 \begin{bmatrix}
-4 & 2 \\
-1 & 3
+a & b \\
+c & d
+\end{bmatrix}
+\Rightarrow
+A^{-1} =
+\frac{1}{ad - bc}
+\begin{bmatrix}
+d & -b \\
+-c & a
 \end{bmatrix}
 $$
 
-Determinant:
+---
 
-$$
-(4 \times 3) - (2 \times 1) = 12 - 2 = 10
-$$
+### In Python (NumPy)
 
-Result: System is solvable.
+```python
+import numpy as np
+
+A = np.array([[2, 3], [1, 4]])
+det = np.linalg.det(A)          # determinant
+inv = np.linalg.inv(A)          # inverse matrix
+
+print("Determinant:", det)
+print("Inverse:\n", inv)
+```
 
 ---
 
-### **Summary Table**
+### If \$\det = 0\$
 
-| Concept        | Role in AI Trading                                     |
-| -------------- | ------------------------------------------------------ |
-| Functions      | Map input variables (scores, prices) to predictions.   |
-| Polynomials    | Capture nonlinear effects in market reactions.         |
-| Linear Systems | Solve for optimal combinations or satisfy constraints. |
-| Vectors        | Represent feature sets compactly for mathematical use. |
-| Matrices       | Organize and process large datasets efficiently.       |
-| Determinants   | Check if a system has unique solutions (solvability).  |
+* The matrix **cannot be inverted**
+* The system \$Ax = b\$ has **no unique solution**
+* It may be **dependent** or **inconsistent**
+
+---
+
+## 4.3 Application in AI / ML
+
+| Concept              | How Determinants and Inverses Matter                                       |
+| -------------------- | -------------------------------------------------------------------------- |
+| Linear regression    | Use inverse to compute weights: \$w = (X^TX)^{-1}X^Ty\$                    |
+| Neural networks      | Rarely use inverses directly, but matrix invertibility ensures solvability |
+| Data transformations | Determinant shows if transformation flips or scales data                   |
+| PCA / SVD            | Use determinant to analyze covariance matrices                             |
+
+---
+
+## Summary: Determinants and Inverses
+
+| Term        | Meaning                                 |
+| ----------- | --------------------------------------- |
+| Determinant | A number that indicates invertibility   |
+| Invertible  | \$\det \ne 0\$, unique solution exists  |
+| Singular    | \$\det = 0\$, no inverse                |
+| Inverse     | "Undo" of a matrix                      |
+| Use         | Solving \$Ax = b\$, regression, ML math |
+
+
 
 
 ---
