--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -14,7 +14,7 @@ But how does the AI make that jump from **input numbers (sentiment scores)** to 
 This is where algebra and linear algebra step in.
 
 
----
+
 
 ### Foundations: Expressions, Equations, and Inequalities
 
@@ -47,7 +47,7 @@ $$
 
   Again, just a combination, no equality or solution.
 
----
+
 
  **Equation**
   An equation is when an expression is set equal to something.
@@ -118,7 +118,7 @@ Inequalities describe conditions, ranges, or boundaries, they tell us what value
 
   This says $y$ can be **less than or equal to** 10.
 
----
+
 
 
 ### **Inequalities help define rules and limits. For example:**
@@ -127,7 +127,7 @@ Inequalities describe conditions, ranges, or boundaries, they tell us what value
 * Avoid stocks where the predicted price drop $\leq -5\%$.
 * Ensure the model’s risk exposure stays below a certain maximum.
 
----
+
 
 #### **Practice Inequalities**
 
@@ -178,9 +178,9 @@ AI models often use functions — sometimes very complex or nonlinear — to tra
 
 Without functions, we cannot systematically map input patterns to meaningful outputs.
 
----
 
-### Apply a Simple Function**
+
+### Apply a Simple Function
 
 Given $f(x) = 3x - 2$:
 
@@ -189,7 +189,6 @@ Given $f(x) = 3x - 2$:
 
 How does the function handle positive vs negative inputs?
 
----
 
 ### **Polynomials: Modeling Nonlinear Relationships**
 
@@ -215,7 +214,7 @@ Polynomials help AI capture these nonlinear relationships, making predictions th
 
 ---
 
-### Explore Polynomial Shape**
+### Explore Polynomial Shape
 
 Sketch or plot:
 
@@ -226,7 +225,7 @@ Where do they rise? Where do they bend?
 How does adding the $x^2$ term change the behavior?
 
 
-#### Compare Linear vs Polynomial**
+#### Compare Linear vs Polynomial
 
 Sketch or plot:
 
@@ -250,7 +249,7 @@ $$
 
 This can represent balancing multiple conditions, like maximizing returns while keeping risk in check.
 
----
+
 
 #### **Solve the System**
 
@@ -282,9 +281,9 @@ Why does this matter?
 AI optimization (like adjusting portfolio weights or risk factors) often comes down to solving large systems like this, sometimes with hundreds of variables.
 
 
----
 
-### Linear Algebra?
+
+## Linear Algebra
 
 Linear algebra builds on basic algebra, but instead of handling single numbers, it works with:
 
@@ -296,11 +295,11 @@ It is often called the language of machine learning and artificial intelligence 
 * Models use matrix operations to make predictions
 * Many algorithms, such as principal component analysis (PCA), linear regression, and neural networks, rely heavily on linear algebra
 
----
+
 
 ## Scalars, Vectors, and Vector Operations
 
----
+
 
 ### 1.1 Scalars
 
@@ -309,7 +308,7 @@ Examples: 5, -3.2, 3.14
 
 In the context of AI, scalars appear as bias terms, learning rates, or single numerical features.
 
----
+
 
 ### 1.2 Vectors
 
@@ -335,13 +334,13 @@ This can be written as a vector:
 
 This vector belongs to three-dimensional real space, written as R³.
 
----
+
 
 ### 1.3 Vector Operations
 
 Here are some basic but essential operations you can perform with vectors.
 
----
+
 
 **1. Addition**
 When you add two vectors, you add their corresponding elements.
@@ -349,7 +348,7 @@ When you add two vectors, you add their corresponding elements.
 Example:
 \[1, 2, 3] + \[4, 5, 6] = \[5, 7, 9]
 
----
+
 
 **2. Scalar Multiplication**
 When you multiply a vector by a scalar, you multiply each element by that scalar.
@@ -357,7 +356,7 @@ When you multiply a vector by a scalar, you multiply each element by that scalar
 Example:
 2 \* \[3, -1] = \[6, -2]
 
----
+
 
 **3. Dot Product (Inner Product)**
 The dot product of two vectors is the sum of the products of their corresponding elements.
@@ -367,7 +366,7 @@ Example:
 
 In AI, the dot product is often used to measure similarity between vectors, which is important in tasks like natural language processing and recommendation systems.
 
----
+
 
 **4. Vector Norm (Length)**
 The norm or length of a vector is calculated as:
@@ -375,7 +374,7 @@ The norm or length of a vector is calculated as:
 
 This gives the magnitude or size of the vector.
 
----
+
 
 **5. Unit Vector**
 A unit vector has a length of 1 and is obtained by dividing a vector by its norm:
@@ -383,7 +382,7 @@ A unit vector has a length of 1 and is obtained by dividing a vector by its norm
 
 Unit vectors are often used to normalize data before feeding it into machine learning models.
 
----
+
 
 ## Real-World Example in Machine Learning
 
@@ -397,9 +396,9 @@ Imagine a machine learning dataset:
 Each row represents a data point and can be treated as a vector.
 This allows machine learning algorithms to apply mathematical operations on the dataset efficiently.
 
----
 
-## Summary of Part 1
+
+## Summary 
 
 | Concept      | Meaning                       |
 | ------------ | ----------------------------- |
@@ -410,7 +409,7 @@ This allows machine learning algorithms to apply mathematical operations on the 
 | Norm         | Magnitude or length of vector |
 | Unit Vector  | Vector scaled to length 1     |
 
----
+
 
 ## Activities for Practice
 
@@ -430,13 +429,13 @@ This allows machine learning algorithms to apply mathematical operations on the 
 
 
 
----
 
-# Matrices
 
----
+## Matrices
 
-## What is a Matrix?
+
+
+### What is a Matrix?
 
 A **matrix** is a **2-dimensional array of numbers**, arranged in rows and columns.
 
@@ -450,20 +449,20 @@ A =
 \end{bmatrix}
 $$
 
-* This matrix has **2 rows** and **3 columns**.
-* We say it has the **shape** \$2 \times 3\$ (read: "2 by 3").
+ This matrix has **2 rows** and **3 columns**.
+ We say it has the **shape** \$2 \times 3\$ (read: "2 by 3").
 
 Each number in a matrix is called an **element** or **entry**.
 
----
+
 
 ## 2.1 Matrix Notation
 
-* A matrix is usually denoted by uppercase letters: \$A, B, X, W\$
-* Elements are denoted as \$a\_{ij}\$, where:
+ A matrix is usually denoted by uppercase letters: \$A, B, X, W\$
+ Elements are denoted as \$a\_{ij}\$, where:
 
-  * \$i\$ is the **row number**
-  * \$j\$ is the **column number**
+   \$i\$ is the **row number**
+   \$j\$ is the **column number**
 
 For example, in:
 
@@ -515,7 +514,7 @@ $$
 \end{bmatrix}
 $$
 
----
+
 
 ### 2. Scalar Multiplication
 
@@ -534,14 +533,14 @@ $$
 \end{bmatrix}
 $$
 
----
+
 
 ### 3. Matrix Multiplication
 
 If:
 
-* \$A\$ is \$m \times n\$
-* \$B\$ is \$n \times p\$
+ \$A\$ is \$m \times n\$
+ \$B\$ is \$n \times p\$
 
 Then the result \$C = AB\$ is \$m \times p\$
 
@@ -633,13 +632,12 @@ This acts like "1" for matrices, does not change the matrix when multiplied.
 | Identity              | Neutral element of multiplication |
 
 ---
-Here’s your **Part 4** with emojis and em dashes removed, just as you asked — no wording touched.
 
----
 
-# Linear Algebra Part 4: Determinants and Inverse Matrices
 
----
+#  Determinants and Inverse Matrices
+
+
 
 ## Why This Chapter Matters
 
@@ -651,12 +649,12 @@ $$
 
 But this **only works** if:
 
-* \$A\$ is **square** (same number of rows and columns)
-* \$A\$ is **invertible**
+ \$A\$ is **square** (same number of rows and columns)
+ \$A\$ is **invertible**
 
 To **check** if a matrix is invertible, we calculate its **determinant**.
 
----
+
 
 ## 4.1 Determinant
 
@@ -666,7 +664,7 @@ The **determinant** of a square matrix is a **single number** that gives informa
 * The volume scaling factor of a transformation
 * If a set of vectors is linearly dependent
 
----
+
 
 ### Determinant of a 2×2 Matrix
 
@@ -692,7 +690,7 @@ $$
 
 If **det ≠ 0**, the matrix is **invertible**.
 
----
+
 
 ### Determinant of a 3×3 Matrix
 
