--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -287,8 +287,9 @@ AI optimization (like adjusting portfolio weights or risk factors) often comes d
 
 Linear algebra builds on basic algebra, but instead of handling single numbers, it works with:
 
-* Vectors
-* Matrices
+- Vectors
+- Matrices
+
 It is often called the language of machine learning and artificial intelligence (AI) because:
 
 * Data is usually stored as vectors and matrices
@@ -495,7 +496,7 @@ $$
 
 ### 1. Matrix Addition / Subtraction
 
-Can only be done if both matrices are of the **same size**:
+Can only be done if both matrices are of the same size:
 
 $$
 \begin{bmatrix}
