--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -438,7 +438,7 @@ This allows machine learning algorithms to apply mathematical operations on the 
 
 ### What is a Matrix?
 
-A **matrix** is a **2-dimensional array of numbers**, arranged in rows and columns.
+A **matrix** is a 2-dimensional array of numbers, arranged in rows and columns.
 
 It looks like this:
 
@@ -450,8 +450,8 @@ A =
 \end{bmatrix}
 $$
 
- This matrix has **2 rows** and **3 columns**.
- We say it has the **shape** \$2 \times 3\$ (read: "2 by 3").
+ This matrix has 2 rows and 3 columns.
+ We say it has the shape \$2 \times 3\$ (read: "2 by 3").
 
 Each number in a matrix is called an **element** or **entry**.
 
@@ -462,8 +462,8 @@ Each number in a matrix is called an **element** or **entry**.
  A matrix is usually denoted by uppercase letters: \$A, B, X, W\$
  Elements are denoted as \$a\_{ij}\$, where:
 
-   \$i\$ is the **row number**
-   \$j\$ is the **column number**
+   \$i\$ is the row number
+   \$j\$ is the column number
 
 For example, in:
 
