--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -490,15 +490,13 @@ $$
 | **Diagonal Matrix**  | Only diagonal may have values   |
 | **Symmetric Matrix** | \$A = A^T\$ (Transpose is same) |
 
----
 
-## 2.3 Matrix Operations
 
 ### 1. Matrix Addition / Subtraction
 
 Can only be done if both matrices are of the same size:
 
-
+```latex
 $$
 \begin{bmatrix}
 1 & 2 \\
@@ -515,6 +513,7 @@ $$
 10 & 12
 \end{bmatrix}
 $$
+
 
 
 
