--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -14,6 +14,7 @@ But how does the AI make that jump from **input numbers (sentiment scores)** to 
 This is where algebra and linear algebra step in.
 
 
+![Matrix Addition](https://latex.codecogs.com/png.image?\dpi{120} \begin{bmatrix}1&2\\3&4\end{bmatrix} + \begin{bmatrix}5&6\\7&8\end{bmatrix} = \begin{bmatrix}6&8\\10&12\end{bmatrix})
 
 
 ### Foundations: Expressions, Equations, and Inequalities
@@ -434,7 +435,7 @@ This allows machine learning algorithms to apply mathematical operations on the 
 
 ## Matrices
 
-
+---
 
 ### What is a Matrix?
 
@@ -490,13 +491,13 @@ $$
 | **Diagonal Matrix**  | Only diagonal may have values   |
 | **Symmetric Matrix** | \$A = A^T\$ (Transpose is same) |
 
-
+---
 
 ### 1. Matrix Addition / Subtraction
----
+
 Can only be done if both matrices are of the same size:
 
--
+
 $$
 \begin{bmatrix}
 1 & 2 \\
@@ -759,18 +760,7 @@ $$
 
 ---
 
-### In Python (NumPy)
 
-```python
-import numpy as np
-
-A = np.array([[2, 3], [1, 4]])
-det = np.linalg.det(A)          # determinant
-inv = np.linalg.inv(A)          # inverse matrix
-
-print("Determinant:", det)
-print("Inverse:\n", inv)
-```
 
 ---
 
