--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -14,9 +14,6 @@ But how does the AI make that jump from **input numbers (sentiment scores)** to 
 This is where algebra and linear algebra step in.
 
 
-![Matrix Addition](https://latex.codecogs.com/png.image?\dpi{120} \begin{bmatrix}1&2\\3&4\end{bmatrix} + \begin{bmatrix}5&6\\7&8\end{bmatrix} = \begin{bmatrix}6&8\\10&12\end{bmatrix})
-
-
 ### Foundations: Expressions, Equations, and Inequalities
 
 Before we dive into linear models or advanced systems, it is important to understand the **basic mathematical tools** that make everything possible.
@@ -492,84 +489,57 @@ $$
 | **Symmetric Matrix** | \$A = A^T\$ (Transpose is same) |
 
 ---
-
 ### 1. Matrix Addition / Subtraction
 
 Can only be done if both matrices are of the same size:
 
-
-$$
-\begin{bmatrix}
-1 & 2 \\
-3 & 4
-\end{bmatrix}
+```
+[ [1, 2], [3, 4] ]
 +
-\begin{bmatrix}
-5 & 6 \\
-7 & 8
-\end{bmatrix}
+[ [5, 6], [7, 8] ]
 =
-\begin{bmatrix}
-6 & 8 \\
-10 & 12
-\end{bmatrix}
-$$
+[ [6, 8], [10, 12] ]
+```
 
 ---
+
 ### 2. Scalar Multiplication
 
 Multiply every element of the matrix by a scalar:
 
--
-$$
-2 \cdot
-\begin{bmatrix}
-1 & 2 \\
-3 & 4
-\end{bmatrix}
+```
+2 *
+[ [1, 2], [3, 4] ]
 =
-\begin{bmatrix}
-2 & 4 \\
-6 & 8
-\end{bmatrix}
-$$
+[ [2, 4], [6, 8] ]
+```
 
-
+---
 
 ### 3. Matrix Multiplication
 
 If:
+- A is m × n  
+- B is n × p  
+Then the result C = A × B is m × p
 
- \$A\$ is \$m \times n\$
- \$B\$ is \$n \times p\$
+Example:
 
-Then the result \$C = AB\$ is \$m \times p\$
-
-$$
-\begin{bmatrix}
-1 & 2 \\
-3 & 4
-\end{bmatrix}
-\cdot
-\begin{bmatrix}
-5 \\
-6
-\end{bmatrix}
+```
+[ [1, 2], [3, 4] ]
+*
+[ [5], [6] ]
 =
-\begin{bmatrix}
-1\cdot5 + 2\cdot6 \\
-3\cdot5 + 4\cdot6
-\end{bmatrix}
+[ 1×5 + 2×6, 3×5 + 4×6 ]
 =
-\begin{bmatrix}
-17 \\
-39
-\end{bmatrix}
-$$
+[ 17, 39 ]
+```
+
 ---
-This is extremely important in neural networks:
-**Input vector × Weight matrix = Output vector**
 
+This is extremely important in neural networks:
+
+**Input vector × Weight matrix = Output vector**
 
 
 ### 4. Matrix Transpose
