--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -1,4 +1,9 @@
 # Algebra and Linear Algebra in AI
+<!-- Example if you want to force a specific width -->
+<img
+  src="https://latex.codecogs.com/png.image?\dpi{120}\bg_white\left|\begin{matrix}1&2&3\\0&1&4\\5&6&0\end{matrix}\right|=1\times(1\times0-4\times6)\;-\;2\times(0\times0-4\times5)\;+\;3\times(0\times6-1\times5)\;=\;-24\;+\;40\;-\;15\;=\;1"
+  width="350"
+  alt="Determinant Example"/>
 
 Algebra and linear algebra might sound like complicated math topics, but they are actually the backbone of many technologies shaping our world today, including Artificial Intelligence (AI), data analysis, and machine learning.
 
