--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -672,30 +672,29 @@ If **det ≠ 0**, the matrix is **invertible**.
 
 Use the **rule of Sarrus** or **cofactor expansion**:
 
-$$
-\begin{vmatrix}
-a & b & c \\
-d & e & f \\
-g & h & i
-\end{vmatrix}
-=
-a(ei - fh) - b(di - fg) + c(dh - eg)
-$$
----
-Example:
+>
+> $$
+> \begin{vmatrix}
+> a & b & c\\
+> d & e & f\\
+> g & h & i
+> \end{vmatrix}
+> = a\,(ei - fh)\;-\;b\,(di - fg)\;+\;c\,(dh - eg)
+> $$
 
-$$
-\begin{vmatrix}
-1 & 2 & 3 \\
-0 & 1 & 4 \\
-5 & 6 & 0
-\end{vmatrix}
-= 1(1×0 - 4×6) - 2(0×0 - 4×5) + 3(0×6 - 1×5)
-= 1(0 - 24) - 2(0 - 20) + 3(0 - 5)
-= -24 + 40 - 15 = 1
-$$
+> **Example:**
+>
+> $$
+> \begin{vmatrix}
+> 1 & 2 & 3\\
+> 0 & 1 & 4\\
+> 5 & 6 & 0
+> \end{vmatrix}
+> = 1\,(1\cdot0 - 4\cdot6)\;-\;2\,(0\cdot0 - 4\cdot5)\;+\;3\,(0\cdot6 - 1\cdot5)
+> = (-24) + 40 + (-15) = 1.
+> $$
 
----
+
 
 ### Key Rule
 
