--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -493,31 +493,45 @@ $$
 | **Diagonal Matrix**  | Only diagonal may have values   |
 | **Symmetric Matrix** | \$A = A^T\$ (Transpose is same) |
 
----
+
 ### 1. Matrix Addition / Subtraction
 
 Can only be done if both matrices are of the same size:
 
-```
-[ [1, 2], [3, 4] ]
-+
-[ [5, 6], [7, 8] ]
-=
-[ [6, 8], [10, 12] ]
-```
+> $$
+> \begin{bmatrix}
+> 1 & 2 \\
+> 3 & 4
+> \end{bmatrix}
+> +
+> \begin{bmatrix}
+> 5 & 6 \\
+> 7 & 8
+> \end{bmatrix}
+> =
+> \begin{bmatrix}
+> 6 & 8 \\
+> 10 & 12
+> \end{bmatrix}
+> $$
 
----
 
 ### 2. Scalar Multiplication
 
 Multiply every element of the matrix by a scalar:
 
-```
-2 *
-[ [1, 2], [3, 4] ]
-=
-[ [2, 4], [6, 8] ]
-```
+> $$
+> 2 \cdot
+> \begin{bmatrix}
+> 1 & 2 \\
+> 3 & 4
+> \end{bmatrix}
+> =
+> \begin{bmatrix}
+> 2 & 4 \\
+> 6 & 8
+> \end{bmatrix}
+> $$
 
 ---
 
@@ -530,16 +544,27 @@ Then the result C = A × B is m × p
 
 Example:
 
-```
-[ [1, 2], [3, 4] ]
-*
-[ [5], [6] ]
-=
-[ 1×5 + 2×6, 3×5 + 4×6 ]
-=
-[ 17, 39 ]
-```
-
+> $$
+> \begin{bmatrix}
+> 1 & 2 \\
+> 3 & 4
+> \end{bmatrix}
+> \cdot
+> \begin{bmatrix}
+> 5 \\
+> 6
+> \end{bmatrix}
+> =
+> \begin{bmatrix}
+> 1\cdot5 + 2\cdot6 \\
+> 3\cdot5 + 4\cdot6
+> \end{bmatrix}
+> =
+> \begin{bmatrix}
+> 17 \\
+> 39
+> \end{bmatrix}
+> $$
 ---
 
 This is extremely important in neural networks:
@@ -672,7 +697,7 @@ If **det ≠ 0**, the matrix is **invertible**.
 
 Use the **rule of Sarrus** or **cofactor expansion**:
 
->
+
 > $$
 > \begin{vmatrix}
 > a & b & c\\
@@ -682,17 +707,17 @@ Use the **rule of Sarrus** or **cofactor expansion**:
 > = a\,(ei - fh)\;-\;b\,(di - fg)\;+\;c\,(dh - eg)
 > $$
 
-> **Example:**
->
-> $$
-> \begin{vmatrix}
-> 1 & 2 & 3\\
-> 0 & 1 & 4\\
-> 5 & 6 & 0
-> \end{vmatrix}
-> = 1\,(1\cdot0 - 4\cdot6)\;-\;2\,(0\cdot0 - 4\cdot5)\;+\;3\,(0\cdot6 - 1\cdot5)
-> = (-24) + 40 + (-15) = 1.
-> $$
+ **Example:**
+$$
+\begin{vmatrix}
+1 & 2 & 3 \\
+0 & 1 & 4 \\
+5 & 6 & 0
+\end{vmatrix}
+= 1(1×0 - 4×6) - 2(0×0 - 4×5) + 3(0×6 - 1×5)
+= 1(0 - 24) - 2(0 - 20) + 3(0 - 5)
+= -24 + 40 - 15 = 1
+$$
 
 
 
