--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -1,6 +1,6 @@
-# Algebra and Linear Algebra in AI
----
-**$$
+Algebra and Linear Algebra in AI
+
+$$
 \begin{bmatrix}
 1 & 2 \\
 3 & 4
@@ -10,13 +10,13 @@
 5 & 6 \\
 7 & 8
 \end{bmatrix}
-=
+=/
 \begin{bmatrix}
 6 & 8 \\
 10 & 12
 \end{bmatrix}
-$$**
----
+$$
+
 Algebra and linear algebra might sound like complicated math topics, but they are actually the backbone of many technologies shaping our world today, including Artificial Intelligence (AI), data analysis, and machine learning.
 
 To make this real, imagine Alex, a data scientist. His goal is to build an AI system that can predict how a company’s stock price might move after news comes out.
