--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -509,40 +509,37 @@ $$
 
 Can only be done if both matrices are of the same size:
 
-> $$
-> \begin{bmatrix}
-> 1 & 2 \\
-> 3 & 4
-> \end{bmatrix}
-> +
-> \begin{bmatrix}
-> 5 & 6 \\
-> 7 & 8
-> \end{bmatrix}
-> =
-> \begin{bmatrix}
-> 6 & 8 \\
-> 10 & 12
-> \end{bmatrix}
-> $$
+$$
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
++
+\begin{bmatrix}
+5 & 6 \\
+7 & 8
+\end{bmatrix}
+= \begin{bmatrix}
+6 & 8 \\
+10 & 12
+\end{bmatrix}
+$$
 
 
 ### 2. Scalar Multiplication
 
 Multiply every element of the matrix by a scalar:
-
-> $$
-> 2 \cdot
-> \begin{bmatrix}
-> 1 & 2 \\
-> 3 & 4
-> \end{bmatrix}
-> =
-> \begin{bmatrix}
-> 2 & 4 \\
-> 6 & 8
-> \end{bmatrix}
-> $$
+$$
+2 \cdot
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
+= \begin{bmatrix}
+2 & 4 \\
+6 & 8
+\end{bmatrix}
+$$
 
 ---
 
@@ -555,28 +552,26 @@ Then the result C = A × B is m × p
 
 Example:
 
-> $$
-> \begin{bmatrix}
-> 1 & 2 \\
-> 3 & 4
-> \end{bmatrix}
-> \cdot
-> \begin{bmatrix}
-> 5 \\
-> 6
-> \end{bmatrix}
-> =
-> \begin{bmatrix}
-> 1\cdot5 + 2\cdot6 \\
-> 3\cdot5 + 4\cdot6
-> \end{bmatrix}
-> =
-> \begin{bmatrix}
-> 17 \\
-> 39
-> \end{bmatrix}
-> $$
----
+$$
+\begin{bmatrix}
+1 & 2 \\
+3 & 4
+\end{bmatrix}
+\cdot
+\begin{bmatrix}
+5 \\
+6
+\end{bmatrix}
+= \begin{bmatrix}
+1\cdot5 + 2\cdot6 \\
+3\cdot5 + 4\cdot6
+\end{bmatrix}
+= \begin{bmatrix}
+17 \\
+39
+\end{bmatrix}
+$$
+
 
 This is extremely important in neural networks:
 
