--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -715,8 +715,7 @@ Use the **rule of Sarrus** or **cofactor expansion**:
 
  **Example:**
 $$
-\begin{vmatrix}
-1 & 2 & 3 \\
+\begin{vmatrix} 1 & 2 & 3 \\
 0 & 1 & 4 \\
 5 & 6 & 0
 \end{vmatrix}
