--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -714,14 +714,13 @@ Use the **rule of Sarrus** or **cofactor expansion**:
 > $$
 
  **Example:**
+ 
 $$
-\begin{vmatrix} 1 & 2 & 3 \\
+\begin{vmatrix} 
+1 & 2 & 3 \\
 0 & 1 & 4 \\
 5 & 6 & 0
-\end{vmatrix}
-= 1(1×0 - 4×6) - 2(0×0 - 4×5) + 3(0×6 - 1×5)
-= 1(0 - 24) - 2(0 - 20) + 3(0 - 5)
-= -24 + 40 - 15 = 1
+\end{vmatrix} = 1(1×0 - 4×6) - 2(0×0 - 4×5) + 3(0×6 - 1×5) = 1(0 - 24) - 2(0 - 20) + 3(0 - 5) = -24 + 40 - 15 = 1
 $$
 
 
