--- a/math-session/session1/slides/f1.md
+++ b/math-session/session1/slides/f1.md
@@ -730,7 +730,7 @@ $$
 | Determinant | Matrix Type                   | System                   |
 | ----------- | ----------------------------- | ------------------------ |
 | 0           | **Not invertible** (Singular) | No or infinite solutions |
-| ≠ 0         | **Invertible** (Non-singular) | Unique solution exists   |
+| $\neq$ 0    | **Invertible** (Non-singular) | Unique solution exists   |
 
 ---
 
